# dotenv

./: .editorconfig  .env  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  MIT_LICENSE.md  README.md  SECURITY.md  appveyor.yml  premake5.lua  run.bat
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml
.github/workflows/: cmake.yaml  msbuild.yaml
Dotenv/: Dotenv.sln  Dotenv.vcxproj  Dotenv.vcxproj.filters
Dotenv/dotenv/: dotenv.cpp  dotenv.h
Dotenv/test/: .env
Dotenv/x64/Release/: Dotenv.iobj  Dotenv.ipdb
Dotenv/x64/Release/Dotenv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dotenv.lastbuildstate  Dotenv.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dotenv/: dotenv.cpp
include/dotenv/: dotenv-alt.h  dotenv.h
test/: .env  test.cpp  test.h  test_alt.cpp  test_oop.cpp
